--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
   height: 100vh;
   color: #fff;
   font-family: "Comfortaa", serif;
+  font-size: 16px;
   text-align: center;
-  padding: 0 10%;
+  padding: 0 2%;
 }
 
 @-webkit-keyframes gradient {
@@ -30,11 +31,13 @@ body {
 }
 
 .wrapper {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
   height: auto;
+  padding: 30px 0;
 }
 
 #teaser {
