--- a/style.css
+++ b/style.css
@@ -1,156 +1,177 @@
+/* @formatter:off */
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+/*# sourceMappingURL=normalize.min.css.map */
+
+/* @formatter:on */
+
+@font-face {
+	font-family: 'Comfortaa';
+	font-style: normal;
+	font-weight: 300;
+	src: url(comfortaa_light.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 body {
-  background: #050b2b;
-  background: linear-gradient(45deg, #050b2b, #230740, #050b2b, #230740);
-  background-size: 400% 400%;
-  -webkit-animation: gradient 9s linear infinite;
-          animation: gradient 9s linear infinite;
-  height: 100vh;
-  color: #fff;
-  font-family: "Comfortaa", serif;
-  text-align: center;
-  padding: 0 4%;
+	background: #050b2b;
+	background: linear-gradient(45deg, #050b2b, #230740, #050b2b, #230740);
+	background-size: 400% 400%;
+	-webkit-animation: gradient 9s linear infinite;
+	animation: gradient 9s linear infinite;
+	height: 100vh;
+	color: #fff;
+	font-family: "Comfortaa", serif;
+	text-align: center;
+	padding: 0 4%;
 }
 
 @-webkit-keyframes gradient {
-  0% {
-    background-position: 100% 0%;
-  }
-  100% {
-    background-position: 15% 100%;
-  }
+	0% {
+		background-position: 100% 0%;
+	}
+	100% {
+		background-position: 15% 100%;
+	}
 }
 
 @keyframes gradient {
-  0% {
-    background-position: 100% 0%;
-  }
-  100% {
-    background-position: 15% 100%;
-  }
+	0% {
+		background-position: 100% 0%;
+	}
+	100% {
+		background-position: 15% 100%;
+	}
 }
+
 .wrapper {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: auto;
-  padding: 2rem 0;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	height: auto;
+	padding: 2rem 0;
 }
 
 #teaser {
-  margin: auto;
-  max-width: 800px;
-  -webkit-animation: 1s linear forwards reveal;
-          animation: 1s linear forwards reveal;
+	margin: auto;
+	max-width: 800px;
+	-webkit-animation: 1s linear forwards reveal;
+	animation: 1s linear forwards reveal;
 }
 
 @-webkit-keyframes reveal {
-  from {
-    filter: blur(5px);
-  }
-  to {
-    filter: blur(0px);
-  }
+	from {
+		filter: blur(5px);
+	}
+	to {
+		filter: blur(0px);
+	}
 }
 
 @keyframes reveal {
-  from {
-    filter: blur(5px);
-  }
-  to {
-    filter: blur(0px);
-  }
+	from {
+		filter: blur(5px);
+	}
+	to {
+		filter: blur(0px);
+	}
 }
+
 h1 {
-  font-size: 3rem;
-  letter-spacing: 0.2em;
+	font-size: 3rem;
+	letter-spacing: 0.2em;
 }
 
 p {
-  margin: 4.5rem 0 0;
-  font-size: 1.05rem;
+	margin: 4.5rem 0 0;
+	font-size: 1.05rem;
 }
 
 #author {
-  color: #008dd3;
-  margin-left: 10px;
+	color: #008dd3;
+	margin-left: 10px;
 }
 
 svg {
-  width: 210px;
-  height: 210px;
-  margin: auto;
-  -webkit-animation: 120s rotate linear infinite;
-          animation: 120s rotate linear infinite;
+	width: 210px;
+	height: 210px;
+	margin: auto;
+	-webkit-animation: 120s rotate linear infinite;
+	animation: 120s rotate linear infinite;
 }
 
 circle {
-  cx: 120px;
-  cy: 120px;
-  stroke: #008dd3;
-  stroke-linecap: round;
-  fill: transparent;
-  -webkit-animation: 2s circle ease 1;
-          animation: 2s circle ease 1;
+	cx: 120px;
+	cy: 120px;
+	stroke: #008dd3;
+	stroke-linecap: round;
+	fill: transparent;
+	-webkit-animation: 2s circle ease 1;
+	animation: 2s circle ease 1;
 }
 
 .circle-1 {
-  stroke: #007fbe;
+	stroke: #007fbe;
 }
 
 .circle-2 {
-  stroke: #38b6f5;
-  -webkit-animation: 3s circle-color infinite alternate;
-          animation: 3s circle-color infinite alternate;
+	stroke: #38b6f5;
+	-webkit-animation: 3s circle-color infinite alternate;
+	animation: 3s circle-color infinite alternate;
 }
 
 .circle-3 {
-  stroke: #2ea9e6;
+	stroke: #2ea9e6;
 }
 
 .circle-5 {
-  stroke: #007fbe;
+	stroke: #007fbe;
 }
 
 .circle-6 {
-  stroke: #0078b3;
+	stroke: #0078b3;
 }
 
 @-webkit-keyframes rotate {
-  to {
-    transform: rotate(360deg);
-  }
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 @keyframes rotate {
-  to {
-    transform: rotate(360deg);
-  }
+	to {
+		transform: rotate(360deg);
+	}
 }
+
 @-webkit-keyframes circle {
-  from {
-    stroke-dashoffset: 0;
-  }
+	from {
+		stroke-dashoffset: 0;
+	}
 }
+
 @keyframes circle {
-  from {
-    stroke-dashoffset: 0;
-  }
+	from {
+		stroke-dashoffset: 0;
+	}
 }
+
 @-webkit-keyframes circle-color {
-  20% {
-    stroke: #a5cde1;
-  }
-  100% {
-    stroke: #a5cde1;
-  }
+	20% {
+		stroke: #a5cde1;
+	}
+	100% {
+		stroke: #a5cde1;
+	}
 }
+
 @keyframes circle-color {
-  20% {
-    stroke: #a5cde1;
-  }
-  100% {
-    stroke: #a5cde1;
-  }
+	20% {
+		stroke: #a5cde1;
+	}
+	100% {
+		stroke: #a5cde1;
+	}
 }
